# SubDrone

Lecture1/IDT_Fall2020_module_1/exercise_imu/: imu_razor_data_roll_65deg.txt
Lecture1/IDT_Fall2020_module_1/exercise_imu/Acc/: imu_exercise_lowPass.py  imu_exercise_noise.py  imu_exercise_noise_sub.py  imu_exercise_pitch.py  imu_exercise_roll.py  imu_razor_data_yaw_90deg.txt
Lecture1/IDT_Fall2020_module_1/exercise_imu_kalman/: imu_box3d.py  imu_exercise_kalman.py
Lecture2/IDT_Fall2020_module_2/exercise_nmea_data/: DroneTrack.kml  exportkml.py  nmea_read_1.py  nmea_read_2.py  nmea_read_3.py  nmea_read_4.py  nmea_trimble_gnss_eduquad_flight.txt  testfile.kml
Lecture2/IDT_Fall2020_module_2/exercise_utm/: utm_test.py
Lecture3/IDT_Fall2020_module_3/: fresnelZone.py
Lecture4/IDT_materials_module_4/mavlink_lora_2019/mavlink_lora/: CMakeLists.txt  fmMake.txt  package.xml
Lecture4/IDT_materials_module_4/mavlink_lora_2019/mavlink_lora/include/: mavlink_lora_lib.h  serial.h
Lecture4/IDT_materials_module_4/mavlink_lora_2019/mavlink_lora/launch/: gcs_simple.launch  telemetry_debug.launch
Lecture4/IDT_materials_module_4/mavlink_lora_2019/mavlink_lora/msg/: mavlink_lora_mission_list.msg
Lecture4/IDT_materials_module_4/mavlink_lora_2019/mavlink_lora/scripts/: arm_drone.py  calibrate_compass.py  enable_offboard.py  gcs_keypress.py  gcs_simple.py  land.py  mission_clear_all.py  mission_download.py  mission_lib.py  mission_set_current.py  param_list_get.py  pause_continue.py  print_rssi.py  req_data_stream.py  set_mode.py  set_offboard_setpoint.py  show_pos.py  show_rssi.py  takeoff.py  test_messages.py  upload_mission.py  upload_mission_over_20.py  upload_single_item.py
Lecture4/IDT_materials_module_4/mavlink_lora_2019/mavlink_lora/src/: mavlink_lora_lib.c  mavlink_lora_node.cpp  serial.c
Lecture4/IDT_materials_module_4/mavlink_lora_2019/mavlink_lora/test/: packing_test.cpp
Lecture5/: fixed_wing.csv  fixed_wing.py  outlier.py  positions.csv  qpc_gen_plan.py  simplifier.py  simplify.py
Lecture5/IDT_materials_module_5/: hermite.py  qgc_generate_plan_example.py
Lecture5/convert_u/: convert_UTM.py  converter_geo.py  converter_geo_fixed.py
Lecture5/oldData/: positions2.csv
(+7 files in other folders)
